[gd_scene format=3 uid="uid://didsupfyw66ha"]

[ext_resource type="Script" uid="uid://cbx1ktct7lanb" path="res://scripts/enemy.gd" id="1_ml356"]
[ext_resource type="Texture2D" uid="uid://b6ifsg6s13c55" path="res://assets/waterswordsman.jpg" id="2_7vn7i"]
[ext_resource type="PackedScene" uid="uid://bgg3ql7uo0cgf" path="res://enemy_skill_info.tscn" id="4_7vn7i"]
[ext_resource type="PackedScene" uid="uid://5spa5amgsxfm" path="res://scenes/reusables/hp_bar.tscn" id="4_8i2d0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ysnwy"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6pkpw"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xp1kw"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_76n2e"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6w0c8"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ebmkq"]

[node name="Enemy" type="Node2D" unique_id=1001236855]
scale = Vector2(0.83, 0.83)
script = ExtResource("1_ml356")

[node name="SpriteSpot" type="TextureRect" parent="." unique_id=689770644]
custom_minimum_size = Vector2(250, 250)
offset_left = 55.0
offset_top = 215.0
offset_right = 316.0003
offset_bottom = 465.0
scale = Vector2(0.938, 0.809)
texture = ExtResource("2_7vn7i")
expand_mode = 1

[node name="HP Bar" parent="." unique_id=443795279 instance=ExtResource("4_8i2d0")]
offset_left = 69.3333
offset_top = 470.667
offset_right = 69.3333
offset_bottom = 470.667
metadata/_edit_use_anchors_ = true

[node name="DamageNumberOrigin" type="Node2D" parent="." unique_id=243829846]
position = Vector2(115, 596)

[node name="TargetingArea" type="Button" parent="." unique_id=2122151116]
visible = false
offset_left = 45.0
offset_top = 217.0
offset_right = 288.0
offset_bottom = 576.0
theme_override_styles/normal = SubResource("StyleBoxFlat_ysnwy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6pkpw")
theme_override_styles/hover = SubResource("StyleBoxFlat_xp1kw")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_76n2e")
theme_override_styles/disabled = SubResource("StyleBoxFlat_6w0c8")
theme_override_styles/focus = SubResource("StyleBoxFlat_ebmkq")

[node name="EnemySkillInfo" parent="." unique_id=1389801023 instance=ExtResource("4_7vn7i")]
offset_left = 67.46988
offset_top = 33.73494
offset_right = 287.4699
offset_bottom = 183.73494

[connection signal="pressed" from="TargetingArea" to="." method="_on_targeting_area_pressed"]
